# Remove_ROS_VINS

vins_estimator/: CMakeLists.txt  buildvins_result.csv
vins_estimator/src/: estimator_node.cpp
vins_estimator/src/camera_models/: CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
vins_estimator/src/feature_tracker/: feature_tracker.h
vins_estimator/src/loop-closure/: TemplatedLoopDetector.h  demoDetector.h  keyframe.h  keyframe_database.h  loop_closure.h
